ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/v1/catalog
            pathType: Prefix
            backend:
              service:
                name: catalog-clusterip-srv
                port:  
                  number: 80
          - path: /api/v1/basket
            pathType: Prefix
            backend:
              service:
                name: basket-clusterip-srv
                port:  
                  number: 80
